--- a/SoporteTecnico/index.html
+++ b/SoporteTecnico/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h1>Bienvenido a Monarca</h1>
+    <h1>Servicio al Cliente</h1>
     <p>Selecciona una opción para continuar:</p>
     <ul>
         <li><a href="Formulario.html">Soporte Técnico</a></li>
