--- a/SoporteTecnico/formulario.html
+++ b/SoporteTecnico/formulario.html
@@ -22,6 +22,6 @@
     </form>
 
     <a href="generar_ticket.html" class="ticket-link">Generar Ticket de Soporte</a>
-    <a href="index.html" class="back-link">Volver al Inicio</a>
+    <a href="index.php" class="back-link">Volver al Inicio</a>
 </body>
 </html>
